[package]
name = "shecret"
version = "0.1.2"
edition = "2021"
authors = ["Lorenzo Costa <costa86.com>"]
description = "A CLI SSH/SFTP client"
license = "MIT"
keywords = ["cli", "ssh", "sftp", "server", "sysadmin"]
repository = "https://github.com/costa86/shecret"
documentation = "https://crates.io/crates/shecret"

[dependencies]
copypasta = "0.8.1"
rusqlite = "0.28.0"
tabled = "0.8.0"
colored = "2.0.0"
