[package]
name = "shecret"
version = "0.1.4"
edition = "2021"
authors = ["Lorenzo Costa <costa86.tech>"]
description = "A CLI SSH/SFTP client"
license = "MIT"
keywords = ["cli", "ssh", "sftp", "server", "sysadmin"]
repository = "https://github.com/costa86/shecret"
documentation = "https://docs.rs/shecret/latest/shecret/"
homepage = "https://docs.rs/shecret/latest/shecret/"

[dependencies]
copypasta = "0.8.1"
rusqlite = "0.28.0"
tabled = "0.8.0"
colored = "2.0.0"
home = "0.5.3"