[package]
name = "shecret"
version = "1.0.0"
edition = "2021"
authors = ["Lorenzo Costa <http://www.costa86.tech>"]
description = "A CLI SSH/SFTP client"
license = "AGPL-3.0-or-later"
keywords = ["cli", "ssh", "sftp", "server", "sysadmin"]
repository = "https://github.com/costa86/shecret"
documentation = "https://docs.rs/shecret/latest/shecret/"
homepage = "https://docs.rs/shecret/latest/shecret/"

[dependencies]
copypasta = "0.8.1"
rusqlite = "0.28.0"
tabled = "0.8.0"
colored = "2.0.0"
home = "0.5.3"
dialoguer = "0.10.2"
